# pepper_robot

pepper_app/: .rosinstall  CMakeLists.txt  README.rst  package.xml
pepper_app/launch/: pepper_facedetect.launch  pepper_facedetect.rviz  pepper_facedetect_moveit.launch
